// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom comparator should use a custom comparator based on an error attribute 1`] = `
Array [
  Object {
    "id": "error-1",
    "issue": Object {
      "body": "Found 2 occurences of \\"Error 1\\"",
      "comments": Array [],
      "id": "1",
      "title": "Error 1",
      "url": "https://issue-tracker/project/test/1",
    },
    "name": "Error 1",
    "newOccurrences": Array [
      Object {
        "message": "Error 1",
        "myAttribute": 1,
        "timestamp": 1,
      },
      Object {
        "message": "Error 1",
        "myAttribute": 1,
        "timestamp": 3,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
  Object {
    "id": "error-1",
    "issue": Object {
      "body": "Found 1 occurences of \\"Error 1\\"",
      "comments": Array [],
      "id": "2",
      "title": "Error 1",
      "url": "https://issue-tracker/project/test/2",
    },
    "name": "Error 1",
    "newOccurrences": Array [
      Object {
        "message": "Error 1",
        "myAttribute": 2,
        "timestamp": 2,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
]
`;

exports[`Custom comparator should use a custom comparator based on differences threshold 1`] = `
Array [
  Object {
    "id": "error-1-:-arg0",
    "issue": Object {
      "body": "Found 2 occurences of \\"Error 1 : Arg0\\"",
      "comments": Array [],
      "id": "1",
      "title": "Error 1 : Arg0",
      "url": "https://issue-tracker/project/test/1",
    },
    "name": "Error 1 : Arg0",
    "newOccurrences": Array [
      Object {
        "message": "Error 1 : Arg0",
        "timestamp": 1,
      },
      Object {
        "message": "Error 1 : Arg1",
        "timestamp": 2,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
]
`;

exports[`Track Existing Errors should track an existing error 1`] = `
Array [
  Object {
    "id": "a-new-error",
    "issue": Object {
      "body": "Found 1 occurences of \\"A new error\\"",
      "comments": Array [
        "Found new 1 occurences of A new error",
      ],
      "id": "1",
      "title": "A new error",
      "url": "https://issue-tracker/project/test/1",
    },
    "name": "A new error",
    "newOccurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 2,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 1,
      },
    ],
    "projectId": "test",
  },
]
`;

exports[`Track Existing Errors should track multiples existing errors 1`] = `
Array [
  Object {
    "id": "error-1",
    "issue": Object {
      "body": "Found 2 occurences of \\"Error 1\\"",
      "comments": Array [
        "Found new 2 occurences of Error 1",
      ],
      "id": "1",
      "title": "Error 1",
      "url": "https://issue-tracker/project/test/1",
    },
    "name": "Error 1",
    "newOccurrences": Array [
      Object {
        "message": "Error 1",
        "timestamp": 6,
      },
      Object {
        "message": "Error 1",
        "timestamp": 8,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Error 1",
        "timestamp": 1,
      },
      Object {
        "message": "Error 1",
        "timestamp": 3,
      },
    ],
    "projectId": "test",
  },
  Object {
    "id": "error-2",
    "issue": Object {
      "body": "Found 2 occurences of \\"Error 2\\"",
      "comments": Array [
        "Found new 1 occurences of Error 2",
      ],
      "id": "2",
      "title": "Error 2",
      "url": "https://issue-tracker/project/test/2",
    },
    "name": "Error 2",
    "newOccurrences": Array [
      Object {
        "message": "Error 2",
        "timestamp": 7,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Error 2",
        "timestamp": 2,
      },
      Object {
        "message": "Error 2",
        "timestamp": 4,
      },
    ],
    "projectId": "test",
  },
  Object {
    "id": "error-4",
    "issue": Object {
      "body": "Found 2 occurences of \\"Error 4\\"",
      "comments": Array [],
      "id": "9",
      "title": "Error 4",
      "url": "https://issue-tracker/project/test/9",
    },
    "name": "Error 4",
    "newOccurrences": Array [
      Object {
        "message": "Error 4",
        "timestamp": 9,
      },
      Object {
        "message": "Error 4",
        "timestamp": 10,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
]
`;

exports[`Track New Errors should track a new error 1`] = `
Array [
  Object {
    "id": "a-new-error",
    "issue": Object {
      "body": "Found 1 occurences of \\"A new error\\"",
      "comments": Array [],
      "id": "1",
      "title": "A new error",
      "url": "https://issue-tracker/project/test/1",
    },
    "name": "A new error",
    "newOccurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 1,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
]
`;

exports[`Track New Errors should zip sames new errors together 1`] = `
Array [
  Object {
    "id": "a-new-error",
    "issue": Object {
      "body": "Found 3 occurences of \\"A new error\\"",
      "comments": Array [],
      "id": "1",
      "title": "A new error",
      "url": "https://issue-tracker/project/test/1",
    },
    "name": "A new error",
    "newOccurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 1,
      },
      Object {
        "message": "A new error",
        "timestamp": 3,
      },
      Object {
        "message": "A new error",
        "timestamp": 4,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
  Object {
    "id": "another-error",
    "issue": Object {
      "body": "Found 2 occurences of \\"Another error\\"",
      "comments": Array [],
      "id": "2",
      "title": "Another error",
      "url": "https://issue-tracker/project/test/2",
    },
    "name": "Another error",
    "newOccurrences": Array [
      Object {
        "message": "Another error",
        "timestamp": 2,
      },
      Object {
        "message": "Another error",
        "timestamp": 5,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
  Object {
    "id": "still-an-error",
    "issue": Object {
      "body": "Found 1 occurences of \\"Still an error\\"",
      "comments": Array [],
      "id": "6",
      "title": "Still an error",
      "url": "https://issue-tracker/project/test/6",
    },
    "name": "Still an error",
    "newOccurrences": Array [
      Object {
        "message": "Still an error",
        "timestamp": 6,
      },
    ],
    "occurrences": Array [],
    "projectId": "test",
  },
]
`;
